style.css
html{
    scroll-behavior: smooth;
}
html, body{
    margin: 0;
    padding: 0;
}
.navbar{
    background-color: rgb(32, 32, 32, 0.8);
    font-family: "Inter", sans-serif;
    z-index: 1000;
    position: fixed;
    top: 0;
    width: 100%;
    backdrop-filter: blur(10px);
    display: flex;
    align-items:center;
    justify-content: center;
}
li{
    list-style: none;
    display: inline-block;
    color: rgb(255, 255, 255);
    text-decoration: none;
    font-size: 16px;
    margin: 0 20px;
}
li a{
    color: rgb(204, 204, 204);
    text-decoration: none;
    transition: 0.3s;
}
li a:hover{
    color: white;
}
h1{
    font-family: "Inter", sans-serif;
    text-align: center;
}
p{
    font-family: "Inter", sans-serif;
    text-align: center;
}
button{
    background-color:transparent;
    border: 1px solid black;
    border-radius: 35px;
    padding: 20px 40px;
    cursor: pointer;
    text-align: center;
    outline: none;
}
button:hover{
    background-color: black;
    color: white;
}
.buttonContainer{
    display: flex;
    gap: 10px;
    justify-content: center;
}
#aboutPage, .kinotediv, #skillsPage, #projectPage{
    display: flex;
    flex-direction: column;
    height: 720px;
    width: auto;
    align-items: center;
    justify-content: center;
}
.slide1{
    background-color: black;
}
#kinotePage{
    background: linear-gradient(rgb(37, 41, 109), rgb(206, 214, 239));
}
#skillsPage{
    justify-content: space-between;
    background-color: white;
}
.Project-div{
    background-color: #f5f5f7;
}
.bottomText{
    color: white;
    margin-bottom: 0;
}
.kinoteLogo{
    height: 350px;
    width: auto;
    filter: drop-shadow(-10px 10px 10px rgba(0, 0, 0, 0.315));
    padding: 40px;
}
.kinoteTopText{
color: white;
}
.softwareList li, .languageList li {
    color: black;
    font-weight: bold;
    font-family: "Inter", sans-serif;
}
.softwareList li{
    column-count: 3;
}
.languageList li{
    column-count: 5;
}
.topdiv{
    width: 100%;
}
.topdiv h1{
    text-align: left;
    padding-left: 16%;
    padding-top: 15%;
}
.bottomdiv{
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: space-between;
}
.childdiv{
    background-color: white;
}
.childdiv p, h1{
    text-align: left;
}
#expertisediv, #softwarediv, #languagediv {
    background-color: white;
}
#expertisediv{
    width: 48%;
}
#softwarediv{
    width: 26%;
}
#languagediv{
    width: 26%;
}
#expertisediv p{
    padding-left: 33%;
}
#expertisediv p:not(:first-child), #languagediv p:not(:first-child), #softwarediv p:not(:first-child) {
    font-weight: bold;
}
#expertisediv p:not(:first-child){
    font-size: 32px;
}
.container{
    height:70%;
    width: 1100px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
}
.container div{
    width: 275px;
    height: 175px;
    filter: drop-shadow(-5px 5px 10px rgba(0, 0, 0, 0.315));
    background-color: white;
    transition: 0.5s;
    padding: 5px;
}
.container div:hover{
    filter: drop-shadow(-10px 10px 10px rgba(0, 0, 0, 0.315));
    width: 285px;
    height: 185px;
}
.container .box{
    font-family: "Inter", sans-serif;
    color: black;
    display: flex;
    justify-content: right;
    align-items: center;
}
.container a {
    text-decoration: none;
}
.box p{
padding: 20px;
}
#kendoroImg{
    height: 85px;
}
#calculatorPNG{
    height: 150px;
    padding: 30px;
}
#myIITImg{
    height: 80px;
}
.contacts{
    width: 100%;
    height: 360px;
    background-color: blue;
}
.footer{
    background-color: rgb(228, 228, 228);
    width: auto;
    height: 360px;
    display: flex;
    color: black;
    padding: 6% 0 0 16%;
}
footer p{
    text-align: left;
    font-weight: bold;
}
footer a{
    display: flex;
    text-decoration: none;
    color: black;
    font-family: "Inter", sans-serif;
    padding-bottom: 5px;
}
footer a:hover{
    color: rgb(80, 79, 79);
}

